--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 
+LOG_FILE_MAX_SIZE=20
+LOG_LEVEL=log
+
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
